Minor corrections + cleaning +¨biblio

--- a/backward_disentangling.bib
+++ b/backward_disentangling.bib
@@ -113,10 +113,10 @@ pages = {2-15}
 }
 
 @article{gloaguen2019pseudo,
-  title={Pseudo Marginal Sequential {M}onte {C}arlo methods for general state spaces. {A}pplications to recursive maximum likelihood.},
+  title={A pseudo-marginal sequential Monte Carlo online smoothing algorithm},
   author={Gloaguen, Pierre and Le Corff, Sylvain and Olsson, Jimmy},
-  journal={arXiv:1908.07254},
-  year={2019}}
+  journal={arXiv:1908.07254, to appear in Bernoulli},
+  year={2022}}
   
 
 @article{dempster1977maximum,
