--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -622,7 +622,7 @@ $$
 %\begin{equation} \label{eq:def:rho}
 %    \rho \eqdef 1 - \frac{\udlow}{\udup}
 %\end{equation}
-\textcolor{red}{Here we follow the proofs of \cite{} using strong mixing for both the original model and the variational family. Should see if this can be relaxed.}
+\textcolor{red}{Here we follow the proofs of \cite{gloaguen2019pseudo} using strong mixing for both the original model and the variational family. Should see if this can be relaxed.}
 
 \begin{proposition}
 \label{prop:bias}
@@ -1005,7 +1005,7 @@ from which (ii) follows, as before, by a combination of H\ref{assum:bias:bound} 
 %\end{equation*}
 
 \bibliographystyle{apalike}
-\bibliography{variationalhmm}
+\bibliography{backward_disentangling}
  
 \end{document}
 
