Minor corrections + cleaning +¨biblio

--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -697,10 +697,10 @@ since
 $$
 \frac{\chi \uk{0, n - 1} \addf[n]{k}}{\chi\uk{0, n - 1} \1_{\Xset^n}} = \post{0:n} \addf[n]{k}.
 $$
-For all $m \in \intvect{0}{n}$ and $h \in \bmf{\Xfd^n}$, 
-\begin{equation} \label{eq:retro:prospective:id}
-\postmod{0:m} \uk{m, n - 1} h = \postmod{m} \retrokmod_{m, n} h.  
-\end{equation}
+As for all $m \in \intvect{0}{n}$ and $h \in \bmf{\Xfd^n}$, 
+%\begin{equation} \label{eq:retro:prospective:id}
+ $\postmod{0:m} \uk{m, n - 1} h = \postmod{m} \retrokmod_{m, n} h$.   
+%\end{equation}
 In order to bound each term of this decomposition, write, using Lemma~\ref{lem:retro:prospective:id},  
 $$
 \frac{\postmod{0:m} \uk{m, n - 1} \addf[n]{k}}{\postmod{0:m} \uk{m, n - 1} \1_{\Xset^n}} - \frac{\postmod{0:m - 1} \uk{m - 1, n - 1} \addf[n]{k}}{\postmod{0:m - 1} \uk{m - 1, n - 1} \1_{\Xset^n}} 
